src/objects/Partner_Landing_Page__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_URL__c</fullName>
        <label>Complete URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact whose information should be displayed on the landing page (based on template selected)</inlineHelpText>
        <label>Partner / Employee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Landing Pages</relationshipLabel>
        <relationshipName>Landing_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Numbers__c</fullName>
        <label>Contract Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Content__c</fullName>
        <label>Disclaimer Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>View landing page</description>
        <formula>HYPERLINK(Portal_Url__c &amp; Site_Url__c, Site_Url__c, &apos;_blank&apos;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Tagline__c</fullName>
        <label>Logo Tagline</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Content__c</fullName>
        <label>Marketing Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Content__c</fullName>
        <description>Additional content to appear on the landing page.</description>
        <label>Page Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Page_Headline__c</fullName>
        <label>Page Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Page Template</label>
        <referenceTo>Partner_Page_Template__c</referenceTo>
        <relationshipName>Partner_Landing_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner / Employee Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Landing Pages</relationshipLabel>
        <relationshipName>Partner_Landing_Pages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Display_Name__c</fullName>
        <inlineHelpText>How the partner or employee&apos;s name should appear on the landing page</inlineHelpText>
        <label>Partner / Employee Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Site__c</fullName>
        <label>Portal Site</label>
        <picklist>
            <picklistValues>
                <fullName>Landing Page Site (go.astrumsolar.com)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal Site (partners.astrumsolar.com)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Url__c</fullName>
        <description>Base URL for portal pages based on portal, production vs. sandbox</description>
        <formula>CASE (LEFT(TEXT(Portal_Site__c), 7),
    &apos;Partner&apos;,
        IF ($Organization.Id == &apos;00D230000008jEE&apos;, 
           &apos;http://partners.astrumsolar.com/&apos;, /* production */ 
           &apos;http://astrumsolar.&apos; &amp; MID($User.Username,FIND(&apos;@astrumsolar.com.&apos;,LOWER($User.Username))+17,100) &amp; &apos;.cs14.force.com/partner/&apos;),
        IF ($Organization.Id == &apos;00D230000008jEE&apos;, 
            &apos;http://go.astrumsolar.com/&apos;, /* production */ 
            &apos;http://astrumsolar.&apos; &amp; MID($User.Username,FIND(&apos;@astrumsolar.com.&apos;,LOWER($User.Username))+17,100) &amp; &apos;.cs14.force.com/go/&apos;)
)</formula>
        <label>Portal Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Disclaimer__c</fullName>
        <label>Program Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Disclaimer__c</fullName>
        <label>Promo Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Text__c</fullName>
        <label>Promo Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_Referred_By__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Referred By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Url__c</fullName>
        <description>The URL to display in the portal (e.g., http://partners.astrumsolar.com/partner-xyz)</description>
        <externalId>true</externalId>
        <label>Site Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Landing Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Active__c</columns>
        <columns>Link__c</columns>
        <columns>Page_Template__c</columns>
        <columns>Promo_Text__c</columns>
        <columns>Marketing_Content__c</columns>
        <columns>Program_Disclaimer__c</columns>
        <columns>Promo_Disclaimer__c</columns>
        <columns>Disclaimer_Content__c</columns>
        <columns>Contract_Numbers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAGE-{00000}</displayFormat>
        <label>Page ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Landing Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Partner_Landing_Page_Site_Url_Valid</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Site_Url__c, &apos;^([a-zA-Z0-9]|\\-|\\_|\\.)+$&apos;))</errorConditionFormula>
        <errorDisplayField>Site_Url__c</errorDisplayField>
        <errorMessage>Site Url can only contain letters, numbers, hyphens, underscores, and periods.</errorMessage>
    </validationRules>
</CustomObject>